@@ -1,4 +1,4 @@
-EXTRA_DIST=$(wildcard *.xpm)
+EXTRA_DIST=$(wildcard *.xpm) $(pixmaps_DATA)
 
 pixmapsdir = $(pkgdatadir)/pixmaps
 pixmaps_DATA = xqflogo.png
